apps/gitlab/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:8.6.1
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "50m"
              memory: "25Mi"
