apps/gitlab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: gitlab
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: gitlab
spec:
  clusterIP: None
  selector:
    app: postgresql
  ports:
    - port: 5432
      targetPort: 5432
