apps/gitlab/httproute.yaml
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: gitlab-webservice
#   namespace: gitlab
# spec:
#   parentRefs:
#     - group: gateway.networking.k8s.io
#       kind: Gateway
#       name: homelab
#       namespace: traefik
#       sectionName: websecure
#   hostnames:
#   - "gitlab.ashworks.net"
#   - "gl.homelab.local"
#   rules:
#   # Rule 1: Matches external traffic. Passes it straight through.
#   - matches:
#     - headers:
#       - name: Host
#         value: "gitlab.ashworks.net"
#     backendRefs:
#     - name: gitlab-webservice-default
#       port: 8181

#   # Rule 2: Matches local traffic. Rewrites the host header so GitLab accepts it.
#   - matches:
#     - headers:
#       - name: Host
#         value: "gl.homelab.local"
#     filters:
#     - type: URLRewrite
#       urlRewrite:
#         hostname: "gitlab.ashworks.net"
#     backendRefs:
#     - name: gitlab-webservice-default
#       port: 8181
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-registry
  namespace: gitlab
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "gitlab-registry.ashworks.net"
  rules:
    - matches:
        - headers:
            - name: Host
              value: "gitlab-registry.ashworks.net"
      backendRefs:
        - name: gitlab-registry
          port: 5000
